--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# General Calculator
+**General Calculator**
 
 A simple calculator program that performs various arithmetic and statistical operations.
 
